--- a/src/test/resources/__files/contact.html
+++ b/src/test/resources/__files/contact.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Contact Page</title>
-</head>
+<head><title>Contact Page</title></head>
 <body>
     <h1>Contact Us</h1>
-    <p>Email: test@example.com</p>
+    <p>Email: contact@example.com</p>
     <p>Phone: 123-456-7890</p>
 </body>
 </html>
-
