--- a/src/test/resources/__files/index.html
+++ b/src/test/resources/__files/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Home Page</title>
-</head>
+<head><title>Home Page</title></head>
 <body>
     <h1>Welcome to Test Site</h1>
-    <p>This is the home page of our test website.</p>
+    <p>This is the home page</p>
     <nav>
-        <a href="{{request.baseUrl}}/about.html">About Us</a>
+        <a href="{{request.baseUrl}}/about.html">About</a>
         <a href="{{request.baseUrl}}/contact.html">Contact</a>
     </nav>
 </body>
 </html>
-
