--- a/src/test/resources/__files/about.html
+++ b/src/test/resources/__files/about.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>About Page</title>
-</head>
+<head><title>About Page</title></head>
 <body>
     <h1>About Us</h1>
-    <p>We are a test website for crawler testing.</p>
+    <p>This is the about page</p>
     <nav>
-        <a href="{{request.baseUrl}}/contact.html">Contact Us</a>
+        <a href="{{request.baseUrl}}/contact.html">Contact</a>
     </nav>
 </body>
 </html>
-
